<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Lop!</string>
    <string name="app_name">MobileScope - Lite</string>
    <string name="QUICK_SEARCH_LABEL">Quick Search</string>
    <string name="USERNAME">player name</string>
    <string name="NETWORK">network</string>
    <string name="SEARCHCOUNT">search</string>
    <string name="GO">></string>
    <string name="SEARCHRESULTROW1">Count</string>
    <string name="SEARCHRESULTROW2">Av Profit</string>
    <string name="SEARCHRESULTROW3">Av Stake</string>
    <string name="SEARCHRESULTROW4">Av ROI</string>
    <string name="SEARCHRESULTROW5">Total Profit</string>
    <string name="SEARCHRESULTROW6">Ability</string>
    <string name="SEARCHRESULTVALUE1">Count</string>
    <string name="SEARCHRESULTVALUE2">Av Profit</string>
    <string name="SEARCHRESULTVALUE3">Av Stake</string>
    <string name="SEARCHRESULTVALUE4">Av ROI</string>
    <string name="SEARCHRESULTVALUE5">Total Profit</string>
    <string name="SEARCHRESULTVALUE6">Ability</string>
    <string name="add_values">Add values to the chart</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="add">Add</string>
    <string name="new_series">New series</string>
    <string name="SEARCHPLAYER">Search player</string>
    <string name="get_list_users">Getting user list</string>
    <string name="userlist">a</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="title_activity_select_network">SelectNetworkActivity</string>
    <string name="adv_string1"> Ad text will be displayed</string>
    <string name="crash_toast_text1">Mobilescope application crashed unexpectedly, we will fix this issue as soon as possible.</string>
    <string name="crash_toast_text"></string>
    <string name="new_user_link">New user registration</string>
    <string name="new_user_id">Enter login id</string>
    <string name="new_user_passwd">Enter password</string>
    <string name="new_user_passwdconf">Confirm Password</string>
    <string name="new_user_reg">Register</string>
    <string name="title_activity_user_registration">MobileScope</string>
     <string-array name="pref_refresh">
        <item name="1">Preserve data</item>
        <item name="2">Clear player search data</item>
        <item name="3">Clear tournament search data</item>
        <item name="4">Clear userid and password</item>
         <item name="5">Clear all</item>
    </string-array>
    <string-array name="pref_curr_key">
        <item name="1">$</item>
        <item name="2">€</item>
        <item name="3">£</item>
    </string-array>
    <string-array name="pref_curr_value">
        <item name="1">0</item>
        <item name="2">1</item>
        <item name="3">2</item>
    </string-array>
    
    <string-array name="pref_feedback">
        <item name="1">Send log file</item>
        <item name="2">Send feedback</item>
    </string-array>
    <string name="pref_ver">1.0-Beta</string>
    <string name="pref_refresh_title">Clear cached data</string>
        <string name="pref_refresh_title_summary">Clear stored cache data from the mobile</string>
    <string name="pref_curr_title">Setup Currency</string>
    <string name="pref_feedback_title">Scold or Praise me</string>
    <string name="pref_feedback_title_window">Help us to improve with your valuable comment. Mobilescope will make every effort to satisfy your expentations</string>
    <string name="pref_curr_title_window">Select Currency</string>
    <string name="pref_feedback_window"></string>
    <string name="userreg_password_notmatch">password did not match</string>
    <string name="userreg_short">password is too short</string>
    <string name="userreg_nonsupport">password contains space or non supported characters</string>
    <string name="userreg_userid_exit">user id not available</string>
    <string name="userreg_success">created new user with sharkscope</string>
    <string name="userreg_emailpattern">User id should be in email format</string>
    <string name="userreg_country">Country code:</string>
    <string name="userreg_subscribe">Subscribe to sharkscope.com</string>
    <string name="sign_id">sharkscope</string>
</resources>